// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`oasPathParam Error if $ref path parameter definition is not required 1`] = `
Array [
  Object {
    "code": "path-params",
    "message": "Path parameters are correct and valid.",
    "path": Array [
      "paths",
      "/foo/{bar}",
      "parameters",
    ],
    "range": Object {
      "end": Object {
        "character": 42,
        "line": 5,
      },
      "start": Object {
        "character": 19,
        "line": 3,
      },
    },
    "severity": 0,
    "source": undefined,
    "summary": "Path parameters are correct and valid.",
  },
]
`;

exports[`oasPathParam Error if duplicate path parameters with same name are used 1`] = `
Array [
  Object {
    "code": "path-params",
    "message": "Path parameters are correct and valid.",
    "path": Array [
      "paths",
      "/foo/{bar}/{bar}",
    ],
    "range": Object {
      "end": Object {
        "character": 15,
        "line": 10,
      },
      "start": Object {
        "character": 23,
        "line": 2,
      },
    },
    "severity": 0,
    "source": undefined,
    "summary": "Path parameters are correct and valid.",
  },
]
`;

exports[`oasPathParam Error if no path parameter definition 1`] = `
Array [
  Object {
    "code": "path-params",
    "message": "Path parameters are correct and valid.",
    "path": Array [
      "paths",
      "/foo/{bar}",
    ],
    "range": Object {
      "end": Object {
        "character": 15,
        "line": 3,
      },
      "start": Object {
        "character": 17,
        "line": 2,
      },
    },
    "severity": 0,
    "source": undefined,
    "summary": "Path parameters are correct and valid.",
  },
]
`;

exports[`oasPathParam Error if paths are functionally equivalent 1`] = `
Array [
  Object {
    "code": "path-params",
    "message": "Path parameters are correct and valid.",
    "path": Array [
      "paths",
    ],
    "range": Object {
      "end": Object {
        "character": 15,
        "line": 20,
      },
      "start": Object {
        "character": 10,
        "line": 1,
      },
    },
    "severity": 0,
    "source": undefined,
    "summary": "Path parameters are correct and valid.",
  },
]
`;
